added project links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
           <li><a href="#about">About <span>Me</span></a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#contact">Contact <span>Me</span></a></li>
-          <li><a href="#">Resume</a></li>
         </ul>
       </nav>
     </header>
@@ -48,34 +47,34 @@
         <div class="projects">
 
           <section>
-              <a class="surf-report" href="#">
+              <a class="surf-report" href="https://echandlerdavis.github.io/Project-1-Group-7/">
                 <span>
-                  <h3>Surf Report</h3>
-                  <p>Mern Stack</p>
+                  <h3>Pawesome Petfinder</h3>
+                  <p>HTML/CSS/JavaScript</p>
                 </span>  
               </a>
-            <a class="led-wall" href="#">
+            <a class="led-wall" href="https://jnmayhook.github.io/Weather-Dashboard/">
               <span>
-                <h3>LED Wall</h3>
-                <p>Node/IoT</p>
+                <h3>Weather Dashboard</h3>
+                <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
-            <a class="calculator" href="#">
+            <a class="calculator" href="https://jnmayhook.github.io/Work-Day-Scheduler/">
               <span>
-                <h3>Calculator</h3>
-                <p>React/JavaScript/CSS</p>
+                <h3>Work Day Scheduler</h3>
+                <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
-            <a class="pastel-puzzles" href="#">
+            <a class="pastel-puzzles" href="https://jnmayhook.github.io/Coding-Quiz-Challenge/">
               <span>
-                <h3>Pastel Puzzels</h3>
-                <p>MERN Stack</p>
+                <h3>Coding Quiz Challenge</h3>
+                <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
-            <a class="run-buddy" href="#">
+            <a class="run-buddy" href="https://jnmayhook.github.io/Password-Generator/">
               <span>  
-                <h3>Run Buddy</h3>
-                <p>HTML/CSS</p>
+                <h3>Password Generator</h3>
+                <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
           </section>
