added recent projects

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
         <div class="projects">
 
           <section>
-              <a class="surf-report" href="https://echandlerdavis.github.io/Project-1-Group-7/">
+              <a class="surf-report" href="https://collective-cup.herokuapp.com/">
                 <span>
-                  <h3>Pawesome Petfinder</h3>
-                  <p>HTML/CSS/JavaScript</p>
+                  <h3>Collective Cup</h3>
+                  <p>Full Stack Appliction</p>
                 </span>  
               </a>
-            <a class="led-wall" href="https://jnmayhook.github.io/Weather-Dashboard/">
+            <a class="led-wall" href="https://echandlerdavis.github.io/Project-1-Group-7/">
+              <span>
+                <h3>Pawesome Petfinder</h3>
+                <p>HTML/CSS/JavaScript</p>
+              </span>  
+            </a>
+            <a class="calculator" href="https://jnmayhook.github.io/Weather-Dashboard/">
               <span>
                 <h3>Weather Dashboard</h3>
                 <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
-            <a class="calculator" href="https://jnmayhook.github.io/Work-Day-Scheduler/">
+            <a class="pastel-puzzles" href="https://jnmayhook.github.io/Work-Day-Scheduler/">
               <span>
                 <h3>Work Day Scheduler</h3>
-                <p>HTML/CSS/JavaScript</p>
-              </span>  
-            </a>
-            <a class="pastel-puzzles" href="https://jnmayhook.github.io/Coding-Quiz-Challenge/">
-              <span>
-                <h3>Coding Quiz Challenge</h3>
                 <p>HTML/CSS/JavaScript</p>
               </span>  
             </a>
